@@ -1,3 +1,11 @@
+2016-08-20  Kugan Vivekanandarajah  <kuganv@linaro.org>
+
+	PR tree-optimization/61839
+	* gcc.dg/tree-ssa/pr61839_1.c: New test.
+	* gcc.dg/tree-ssa/pr61839_2.c: New test.
+	* gcc.dg/tree-ssa/pr61839_3.c: New test.
+	* gcc.dg/tree-ssa/pr61839_4.c: New test.
+
 2016-08-19  Joseph Myers  <joseph@codesourcery.com>
 
 	PR c/32187
